--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+borsh = { version = "1.5.1", features = ["derive"] }
 clap = { version = "4.5.17", features = ["cargo", "derive"] }
+rand = { version = "0.8.5", features = ["small_rng"] }
